--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,19 @@
+# Servidor del agente
 SERVER_URL=http://localhost:8080
+# api key opcional
 API_KEY=YOUR_API_KEY
-MODEL_NAME=gemma-3-1b-it@q4_k_m
+# modelo clasificador
+CLASSIFICATOR_MODEL_NAME=gemma-3-1b-it@q4_k_m
+# modelo de respuestas
+MODEL_NAME=gemma-3-4b-it
+# endpoint de modelos, tipo openai
 LM_API_URL=http://localhost/v1/chat/completions
+# parámetros de configuración de modelo
+LM_TEMPERATURE=0.1
+LM_MAX_TOKENS=100
+LM_TOP_K=1
+LM_TOP_P=0.1
+LM_MIN_P=0.01
+LM_REPETITION_PENALTY=-1.1
+# acciones posibles
 ACTIONS=llamada,mensaje,correo,puerta_hogar,matar_pony
-LM_TEMPERATURE=-1
-LM_MAX_TOKENS=-1
-LM_TOP_K=-1
-LM_TOP_P=-1
-LM_MIN_P=-1
-LM_REPETITION_PENALTY=-1
