--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,35 @@
 # Servidor del agente
 SERVER_URL=http://localhost:8080
-# api key opcional
-API_KEY=YOUR_API_KEY
+
 # modelo clasificador
 CLASSIFICATOR_MODEL_NAME=gemma-3-1b-it@q4_k_m
-# modelo de respuestas
-MODEL_NAME=gemma-3-4b-it
-# endpoint de modelos, tipo openai
-LM_API_URL=http://localhost/v1/chat/completions
-# parámetros de configuración de modelo
-LM_TEMPERATURE=0.1
-LM_MAX_TOKENS=100
-LM_TOP_K=1
-LM_TOP_P=0.1
-LM_MIN_P=0.01
-LM_REPETITION_PENALTY=-1.1
+CLASSIFICATOR_LM_API_URL=http://localhost/v1/chat/completions
+# api key opcional
+CLASSIFICATOR_API_KEY=YOUR_API_KEY
+# parámetros de configuración de modelo clasificador
+CLASSIFICATOR_LM_TEMPERATURE=0.1
+CLASSIFICATOR_LM_MAX_TOKENS=100
+CLASSIFICATOR_LM_TOP_K=1
+CLASSIFICATOR_LM_TOP_P=0.1
+CLASSIFICATOR_LM_MIN_P=0.01
+CLASSIFICATOR_LM_REPETITION_PENALTY=-1.1
+
+#
 # acciones posibles
-ACTIONS=llamada,mensaje,correo,puerta_hogar,matar_pony
+ACTIONS=llamada,mensaje,correo,puerta_hogar,view_pony
+#
+#
+
+# modelo de respuestas
+RESPONSE_MODEL_NAME=gemma-3-4b-it
+RESPONSE_LM_API_URL=http://localhost/v1/chat/completions
+# api key opcional
+RESPONSE_API_KEY=YOUR_API_KEY
+# parámetros de configuración de modelo de respuestas
+RESPONSE_LM_TEMPERATURE=0.1
+RESPONSE_LM_MAX_TOKENS=100
+RESPONSE_LM_TOP_K=1
+RESPONSE_LM_TOP_P=0.1
+RESPONSE_LM_MIN_P=0.01
+RESPONSE_LM_REPETITION_PENALTY=-1.1
+
